--- a/transaction/src/main/resources/templates/view/layout/menuBar.html
+++ b/transaction/src/main/resources/templates/view/layout/menuBar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"  >
     <title>메뉴</title>  
     <style>
-            ul {
+            .ul_01 {
               list-style-type: none;
               margin: 0;
               padding: 0;
@@ -14,11 +14,11 @@
               background-color: #f3f3f3;
             }
             
-            li {
+            .li_01 {
               float: left;
             }
             
-            li a {
+            .li_01 a {
               display: block;
               color: #666;
               text-align: center;
@@ -26,20 +26,21 @@
               text-decoration: none;
             }
             
-            li a:hover:not(.active) {
+            .li_01 a:hover:not(.active) {
               background-color: #ddd;
             }
             
-            li a.active {
+            .li_01.active {
               color: white;
               background-color: #04AA6D;
             }
     </style>
 </head>
 <body>
-    <ul>
-      <li><a href="/">주식정보</a></li>
-      <li><a href="/stckDlngView">주식거래정보</a></li>
+    <ul class="ul_01">
+      <li class="li_01"><a href="/">주식정보</a></li>
+      <li class="li_01"><a href="/stckDlng/stckDlngView">주식거래정보</a></li>	  
+	  <li class="li_01"><a href="/weeklyAllocation/weeklyAllocationView">주간배당내역</a></li>
     </ul>
 </body>
 </html>
