--- a/transaction/src/main/resources/templates/view/stckInfo/stckInfoView.html
+++ b/transaction/src/main/resources/templates/view/stckInfo/stckInfoView.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"  >
     <title>주식정보</title>		
-	<link rel="stylesheet" type="text/css" th:href="@{/CSS/stckInfo/stckInfo.css}">    	
-	<link rel="stylesheet" type="text/css" th:href="@{/CSS/com/com.css}">
-    <script type="text/javascript" th:src="@{/JS/utlt/com.js}"></script>
+	<link rel="stylesheet" type="text/css" th:href="@{/CSS/stckInfo/stckInfo.css}">    		
+	<link rel="stylesheet" type="text/css" th:href="@{/CSS/com/modal.css}">    	
+	<link rel="stylesheet" type="text/css" th:href="@{/CSS/com/com.css}">    
+    <script type="text/javascript" th:src="@{/JS/utlt/com.js}"></script>	
+	<script type="text/javascript" th:src="@{/JS/com/modal.js}"></script>	
     <script type="text/javascript" th:src="@{/JS/stckInfo/stckInfo.js}"></script>
 </head>
 <body>
